fix(agent,node-analyzer): updateStrategy maxSurge param

--- a/charts/agent/templates/daemonset.yaml
+++ b/charts/agent/templates/daemonset.yaml
@@ -447,4 +447,7 @@ spec:
     type: {{ .Values.daemonset.updateStrategy.type }}
     rollingUpdate:
       maxUnavailable: {{ include "agent.maxUnavailable" . }}
+      {{- if .Values.daemonset.updateStrategy.rollingUpdate.maxSurge }}
+      maxSurge: {{ .Values.daemonset.updateStrategy.rollingUpdate.maxSurge }}
+      {{- end }}
 {{- end }}
