--- a/charts/node-analyzer/values.yaml
+++ b/charts/node-analyzer/values.yaml
@@ -40,6 +40,7 @@ daemonset:
     # You can also customize maxUnavailable
     rollingUpdate:
       maxUnavailable: 1
+      maxSurge:
 
 rbac:
   # true here enables creation of rbac resources
