test(agent,node-analyzer): add tests to cover the strategy without setting values

--- a/charts/agent/tests/daemonset_update_strategy_test.yaml
+++ b/charts/agent/tests/daemonset_update_strategy_test.yaml
@@ -3,6 +3,19 @@ templates:
   - templates/daemonset.yaml
 tests:
   - it: set default updateStrategy
+    asserts:
+      - equal:
+          path: spec.updateStrategy
+          value:
+            rollingUpdate:
+              maxUnavailable: 1
+            type: RollingUpdate
+      - isNull:
+          path: spec.updateStrategy.rollingUpdate.maxSurge
+    templates:
+      - templates/daemonset.yaml
+
+  - it: sets user defined updateStrategy without maxSurge
     set:
       daemonset:
         updateStrategy:
