--- a/charts/cluster-scanner/tests/deployment_test.yaml
+++ b/charts/cluster-scanner/tests/deployment_test.yaml
@@ -243,3 +243,29 @@ tests:
       - equal:
           path: spec.template.spec.containers[1].image
           value: quay.io/sysdig/image-sbom-extractor:1.0.0
+
+  - it: "succeeds if the runtimeStatusIntegrator version is not a semver and the onPremCompatibilityVersion is 6.2"
+    set:
+      onPremCompatibilityVersion: "6.2"
+      runtimeStatusIntegrator.image.tag: "unstable-rc"
+      imageSbomExtractor.image.tag: "0.9.0"
+    asserts:
+      - equal:
+          path: spec.template.spec.containers[0].image
+          value: quay.io/sysdig/runtime-status-integrator:unstable-rc
+      - equal:
+          path: spec.template.spec.containers[1].image
+          value: quay.io/sysdig/image-sbom-extractor:0.9.0
+
+  - it: "succeeds if the imageSbomExtractor version is not a semver and the onPremCompatibilityVersion is 6.3"
+    set:
+      onPremCompatibilityVersion: "6.3"
+      runtimeStatusIntegrator.image.tag: "1.3.5"
+      imageSbomExtractor.image.tag: "3bc59a4958d15dfa6afed20dfd2459e268b4cda8"
+    asserts:
+      - equal:
+          path: spec.template.spec.containers[0].image
+          value: quay.io/sysdig/runtime-status-integrator:1.3.5
+      - equal:
+          path: spec.template.spec.containers[1].image
+          value: quay.io/sysdig/image-sbom-extractor:3bc59a4958d15dfa6afed20dfd2459e268b4cda8
