--- a/charts/cluster-scanner/templates/deployment.yaml
+++ b/charts/cluster-scanner/templates/deployment.yaml
@@ -97,6 +97,8 @@ spec:
               configMapKeyRef:
                 name: {{ include "cluster-scanner.fullname" . }}
                 key: cluster_name
+                optional: true
+          - name: SYSDIG_KUBECONFIG_CONTENT
           - name: K8S_ROOT_NAMESPACE
             valueFrom:
               configMapKeyRef:
