fix: cluster name should be optional (#1181)

--- a/charts/cluster-scanner/templates/deployment.yaml
+++ b/charts/cluster-scanner/templates/deployment.yaml
@@ -97,6 +97,7 @@ spec:
               configMapKeyRef:
                 name: {{ include "cluster-scanner.fullname" . }}
                 key: cluster_name
+                optional: true
           - name: K8S_ROOT_NAMESPACE
             valueFrom:
               configMapKeyRef:
