--- a/charts/cluster-scanner/templates/configmap.yaml
+++ b/charts/cluster-scanner/templates/configmap.yaml
@@ -10,9 +10,11 @@ data:
   sysdig_verify_certificate: {{ .Values.sslVerifyCertificate | quote }}
   cluster_name: {{ .Values.global.clusterConfig.name }}
   root_namespace: {{ .Values.rootNamespace }}
-  eve_enabled: {{ .Values.eveEnabled | quote}}
+  eve_enabled: {{ .Values.eveEnabled | quote }}
   eve_integration_enabled: {{ .Values.eveIntegrationEnabled | quote }}
   logging_level: {{ .Values.global.loggingLevel }}
+  rsi_pprof_enabled: {{ .Values.runtimeStatusIntegrator.pprofEnabled | quote }}
+  ise_pprof_enabled: {{ .Values.imageSbomExtractor.pprofEnabled | quote }}
 {{- include "cluster-scanner.modeConfig" . | nindent 2 }}
   js_server_user: {{ .Values.runtimeStatusIntegrator.natsJS.user }}
   js_server_url: "nats://{{- include "cluster-scanner.fullname" . }}:4222"
