DOC-3229 - update for clarity, consistency, correctness
Signed-off-by: radhikapc <radhika.puthiyetath@sysdig.com>

--- a/charts/registry-scanner/doc.yaml
+++ b/charts/registry-scanner/doc.yaml
@@ -15,7 +15,7 @@ chart:
 prerequisites:
   - "Helm 3"
   - "Kubernetes v1.16+"
-  - "Cluster Name (pick one to identify your Kubernetes Cluster)"
+  - "Unique name to identify your Kubernetes cluster"
   - "Sysdig Secure API Token"
 
 release:
