--- a/charts/cluster-scanner/tests/secret_test.yaml
+++ b/charts/cluster-scanner/tests/secret_test.yaml
@@ -47,7 +47,7 @@ tests:
   - it: "fills cache redis password, when set"
     set:
       global.sysdig.accessKey: "secret"
-      imageSbomExtractor.cache.type: "redis"
+      imageSbomExtractor.cache.type: "distributed"
       imageSbomExtractor.cache.redis.password: "secret"
     asserts:
       - equal:
@@ -56,7 +56,7 @@ tests:
   - it: "does not require redis password"
     set:
       global.sysdig.accessKey: "secret"
-      imageSbomExtractor.cache.type: "redis"
+      imageSbomExtractor.cache.type: "distributed"
     asserts:
       - isNull:
           path: data.cache_redis_password
