--- a/charts/cluster-scanner/templates/deployment.yaml
+++ b/charts/cluster-scanner/templates/deployment.yaml
@@ -386,7 +386,7 @@ spec:
                 name: {{ include "cluster-scanner.fullname" . }}
                 key: ise_cache_local_ttl
                 optional: true
-          {{- if eq .Values.imageSbomExtractor.cache.type "redis" }}
+          {{- if and (contains "distributed" .Values.imageSbomExtractor.cache.type) (.Values.imageSbomExtractor.cache.redis) }}
           # REDIS (optional)
           - name: ANALYZER_CACHE_REDIS_ADDRESS
             valueFrom:
