fix(kspm-collector,node-analyzer): properly handle affinity beta annotations
Address the issue in both the kspm-collector and node-analyzer charts where
the deployment/daemonset were using both the deprecated use of both
`beta.kubernetes.io/arch` and `beta.kubernetes.io/os` on clusters that cause
warnings to be emitted.

--- a/charts/kspm-collector/templates/deployment.yaml
+++ b/charts/kspm-collector/templates/deployment.yaml
@@ -33,19 +33,21 @@ spec:
           requiredDuringSchedulingIgnoredDuringExecution:
             nodeSelectorTerms:
             - matchExpressions:
-              - key: kubernetes.io/arch
-                operator: In
-                values: {{- toYaml .Values.arch | nindent 18 }}
-              - key: kubernetes.io/os
-                operator: In
-                values: {{- toYaml .Values.os | nindent 18 }}
-            - matchExpressions:
+              {{- if (include "kspmCollector.kubeVersionLessThan" (dict "root" . "major" 1 "minor" 14)) }}
               - key: beta.kubernetes.io/arch
                 operator: In
                 values: {{- toYaml .Values.arch | nindent 18 }}
               - key: beta.kubernetes.io/os
                 operator: In
                 values: {{- toYaml .Values.os | nindent 18 }}
+              {{- else }}
+              - key: kubernetes.io/arch
+                operator: In
+                values: {{- toYaml .Values.arch | nindent 18 }}
+              - key: kubernetes.io/os
+                operator: In
+                values: {{- toYaml .Values.os | nindent 18 }}
+              {{- end }}
       {{- end }}
       tolerations:
 {{ toYaml .Values.tolerations | indent 8 }}
