--- a/charts/cluster-scanner/tests/deployment_test.yaml
+++ b/charts/cluster-scanner/tests/deployment_test.yaml
@@ -1,19 +1,27 @@
 suite: deployment
 templates:
   - ../templates/deployment.yaml
+  - ../templates/rbac.yaml
+  - ../templates/configmap.yaml
+  - ../templates/secret.yaml
 values:
   - ../values.yaml
+  - ./values.required.yaml
 release:
   name: test-release
   namespace: test-ns
 
 tests:
   - it: "generates a deployment resource"
+    templates:
+      - ../templates/deployment.yaml
     asserts:
       - isKind:
           of: Deployment
 
   - it: "has correct name and namespace"
+    templates:
+      - ../templates/deployment.yaml
     asserts:
       - equal:
           path: metadata.name
@@ -23,6 +31,8 @@ tests:
           value: test-ns
 
   - it: "sets replicas"
+    templates:
+      - ../templates/deployment.yaml
     set:
       replicaCount: 42
     asserts:
@@ -31,6 +41,8 @@ tests:
           value: 42
 
   - it: "has RSI and ISE containers"
+    templates:
+      - ../templates/deployment.yaml
     asserts:
       - equal:
           path: spec.template.spec.containers[0].name
@@ -40,6 +52,8 @@ tests:
           value: ise
 
   - it: "has non empty default image"
+    templates:
+      - ../templates/deployment.yaml
     asserts:
       - not: true
         isEmpty:
@@ -49,6 +63,8 @@ tests:
           path: spec.template.spec.containers[1].image
 
   - it: "sets tag and repository"
+    templates:
+      - ../templates/deployment.yaml
     set:
       runtimeStatusIntegrator.image.registry: registry-rsi.io
       runtimeStatusIntegrator.image.repository: test.com/repo
@@ -65,6 +81,8 @@ tests:
           value: registry-ise.io/test-ise.com/repo:0.0.1
 
   - it: "sets kubeconfig env var if set"
+    templates:
+      - ../templates/deployment.yaml
     set:
       scannerMode: "multi"
       runtimeStatusIntegrator.multiCluster.kubeconfigSecretName: "my-secret"
@@ -82,6 +100,8 @@ tests:
                 key: .kubeconfig
 
   - it: "sets redis caching env vars when cache type is redis"
+    templates:
+      - ../templates/deployment.yaml
     set:
       imageSbomExtractor.cache.type: "distributed"
       imageSbomExtractor.cache.redis.address: "redis://redis:6379"
@@ -100,12 +120,16 @@ tests:
                 optional: true
 
   - it: "has Recreate rollout strategy"
+    templates:
+      - ../templates/deployment.yaml
     asserts:
       - equal:
           path: spec.strategy.type
           value: Recreate
 
   - it: "sets the local registry secrets when in local mode"
+    templates:
+      - ../templates/deployment.yaml
     set:
       scannerMode: "local"
       runtimeStatusIntegrator.localCluster:
@@ -129,6 +153,8 @@ tests:
                 optional: true
 
   - it: "does not set the local registry secrets when in multi mode"
+    templates:
+      - ../templates/deployment.yaml
     set:
       scannerMode: "multi"
       runtimeStatusIntegrator.multiCluster.kubeconfigSecretName: "my-secret"
@@ -153,6 +179,8 @@ tests:
                 optional: true
 
   - it: "fails if the onPremCompatibilityVersion is not set and the runtimeStatusIntegrator version is incorrect"
+    templates:
+      - ../templates/deployment.yaml
     set:
       onPremCompatibilityVersion: null
       runtimeStatusIntegrator.image.tag: "0.3.4"
@@ -162,6 +190,8 @@ tests:
           errorMessage: "incompatible version for runtimeStatusIntegrator.image.tag, set 0.3.4 expected >= 1.0.0"
 
   - it: "fails if the onPremCompatibilityVersion is not set and the imageSbomExtractor version is incorrect"
+    templates:
+      - ../templates/deployment.yaml
     set:
       onPremCompatibilityVersion: null
       runtimeStatusIntegrator.image.tag: "1.3.4"
@@ -171,6 +201,8 @@ tests:
           errorMessage: "incompatible version for imageSbomExtractor.image.tag, set 0.1.0 expected >= 1.0.0"
 
   - it: "fails if the onPremCompatibilityVersion is set to 6.2 and the runtimeStatusIntegrator version is incorrect"
+    templates:
+      - ../templates/deployment.yaml
     set:
       onPremCompatibilityVersion: "6.2"
       runtimeStatusIntegrator.image.tag: "4.3.4"
@@ -180,6 +212,8 @@ tests:
           errorMessage: "incompatible version for runtimeStatusIntegrator.image.tag, set 4.3.4 expected < 1.0.0"
 
   - it: "fails if the onPremCompatibilityVersion is not set to 6.2 the imageSbomExtractor version is incorrect"
+    templates:
+      - ../templates/deployment.yaml
     set:
       onPremCompatibilityVersion: "6.2"
       runtimeStatusIntegrator.image.tag: "0.0.1"
@@ -189,6 +223,8 @@ tests:
           errorMessage: "incompatible version for imageSbomExtractor.image.tag, set 6.1.0 expected < 1.0.0"
 
   - it: "fails if the onPremCompatibilityVersion is set to 6.3 and the runtimeStatusIntegrator version is incorrect"
+    templates:
+      - ../templates/deployment.yaml
     set:
       onPremCompatibilityVersion: "6.3"
       runtimeStatusIntegrator.image.tag: "0.3.4"
@@ -198,6 +234,8 @@ tests:
           errorMessage: "incompatible version for runtimeStatusIntegrator.image.tag, set 0.3.4 expected >= 1.0.0"
 
   - it: "fails if the onPremCompatibilityVersion is not set to 6.3 the imageSbomExtractor version is incorrect"
+    templates:
+      - ../templates/deployment.yaml
     set:
       onPremCompatibilityVersion: "6.3"
       runtimeStatusIntegrator.image.tag: "1.3.4"
@@ -207,6 +245,8 @@ tests:
           errorMessage: "incompatible version for imageSbomExtractor.image.tag, set 0.1.0 expected >= 1.0.0"
 
   - it: "succeeds if the onPremCompatibilityVersion is not set and the runtimeStatusIntegrator and imageSbomExtractor versions are correct"
+    templates:
+      - ../templates/deployment.yaml
     set:
       onPremCompatibilityVersion: null
       runtimeStatusIntegrator.image.tag: "2.3.4"
@@ -220,6 +260,8 @@ tests:
           value: quay.io/sysdig/image-sbom-extractor:1.0.0
 
   - it: "succeeds if the onPremCompatibilityVersion is set to 6.2 and the runtimeStatusIntegrator and imageSbomExtractor versions are correct"
+    templates:
+      - ../templates/deployment.yaml
     set:
       onPremCompatibilityVersion: "6.2"
       runtimeStatusIntegrator.image.tag: "0.3.4"
@@ -233,6 +275,8 @@ tests:
           value: quay.io/sysdig/image-sbom-extractor:0.9.10
 
   - it: "succeeds if the onPremCompatibilityVersion is set to 6.3 and the runtimeStatusIntegrator and imageSbomExtractor versions are correct"
+    templates:
+      - ../templates/deployment.yaml
     set:
       onPremCompatibilityVersion: "6.3"
       runtimeStatusIntegrator.image.tag: "2.3.4"
@@ -246,6 +290,8 @@ tests:
           value: quay.io/sysdig/image-sbom-extractor:1.0.0
 
   - it: "succeeds if the runtimeStatusIntegrator version is not a semver and the onPremCompatibilityVersion is 6.2"
+    templates:
+      - ../templates/deployment.yaml
     set:
       onPremCompatibilityVersion: "6.2"
       runtimeStatusIntegrator.image.tag: "unstable-rc"
@@ -259,6 +305,8 @@ tests:
           value: quay.io/sysdig/image-sbom-extractor:0.9.0
 
   - it: "succeeds if the imageSbomExtractor version is not a semver and the onPremCompatibilityVersion is 6.3"
+    templates:
+      - ../templates/deployment.yaml
     set:
       onPremCompatibilityVersion: "6.3"
       runtimeStatusIntegrator.image.tag: "1.3.5"
