--- a/charts/cluster-scanner/tests/configmap_test.yaml
+++ b/charts/cluster-scanner/tests/configmap_test.yaml
@@ -65,6 +65,9 @@ tests:
           path: data.ise_cache_local_ttl
           value: 168h
       - equal:
+          path: data.ise_cache_local_lru_max_element_size
+          value: "102400"
+      - equal:
           path: data.sysdig_verify_certificate
           value: "true"
 
