--- a/charts/cluster-scanner/values.yaml
+++ b/charts/cluster-scanner/values.yaml
@@ -61,7 +61,7 @@ runtimeStatusIntegrator:
     repository: sysdig/runtime-status-integrator
     # The Runtime Status Integrator image pull policy
     pullPolicy: IfNotPresent
-    tag: "0.4.0"
+    tag: "0.4.1"
   # Params to manage leader election
   # Leader election is implemented leveraging the native capabilities of
   # Kubernetes see: https://kubernetes.io/blog/2016/01/simple-leader-election-with-kubernetes/
@@ -129,7 +129,7 @@ imageSbomExtractor:
     repository: sysdig/image-sbom-extractor
     # The Image SBOM Extractor image pull policy
     pullPolicy: IfNotPresent
-    tag: "0.4.0"
+    tag: "0.4.1"
   ports:
     # The port to be used to expose prometheus metrics for the Image SBOM
     # Extractor
@@ -168,6 +168,9 @@ imageSbomExtractor:
       maxSizeBytes: "36700160"
       # The TTL for items in the local cache. By default it is set to 7 days.
       ttl: "168h"
+      # When using `local[lru]` as cache type, restrict the maximum size of elements to be cached.
+      # By default it is set to 100KB
+      lruMaxElementSize: "102400"
     # Redis connection details (to be provided if the cache type is "distributed")
     # redis:
     #   address: ""
