Add logic to disable HPA and based on that set replica count.
Signed-off-by: Marat Salakhutdinov <marat.salakhutdinov@sysdig.com>

--- a/charts/admission-controller/templates/webhook/autoscaler.yaml
+++ b/charts/admission-controller/templates/webhook/autoscaler.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.webhook.autoscaling.enabled }}
 apiVersion: autoscaling/v1
 kind: HorizontalPodAutoscaler
 metadata:
@@ -11,3 +12,4 @@ spec:
     kind: Deployment
     name: {{ include "admissionController.webhook.fullname" . }}
   targetCPUUtilizationPercentage: {{ .Values.webhook.autoscaling.targetCPUUtilizationPercentage }}
+{{- end }}
