--- a/charts/cluster-scanner/templates/configmap.yaml
+++ b/charts/cluster-scanner/templates/configmap.yaml
@@ -22,9 +22,7 @@ data:
   rsi_leaderelection_lock_namespace: {{ .Values.runtimeStatusIntegrator.leaderElectionLeaseNamespaceOverride | default .Release.Namespace }}
   rsi_service_name: {{ include "cluster-scanner.fullname" . }}
 {{- include "cluster-scanner.rsiJsConfig" . | nindent 2 }}
-  ise_cache_type: {{ .Values.imageSbomExtractor.cache.type }}
-  ise_cache_local_max_size: {{ .Values.imageSbomExtractor.cache.local.maxSizeBytes | quote }}
-  ise_cache_local_ttl: {{ .Values.imageSbomExtractor.cache.local.ttl }}
-  ise_cache_local_max_element_size: {{ .Values.imageSbomExtractor.cache.local.maxElementSizeBytes | quote }}
 {{- include "cluster-scanner.iseJsConfig" . | nindent 2 }}
+  ise_cache_type: {{ .Values.imageSbomExtractor.cache.type }}
 {{- include "cluster-scanner.redisCacheConfig" . | nindent 2 }}
+{{- include "cluster-scanner.localCacheConfig" . | nindent 2 }}
