refactor(cluster-scanner): split rbac.yaml into 4 files one per resource

--- a/charts/cluster-scanner/tests/deployment_test.yaml
+++ b/charts/cluster-scanner/tests/deployment_test.yaml
@@ -1,7 +1,10 @@
 suite: deployment
 templates:
   - ../templates/deployment.yaml
-  - ../templates/rbac.yaml
+  - ../templates/clusterrole.yaml
+  - ../templates/clusterrolebinding.yaml
+  - ../templates/role.yaml
+  - ../templates/rolebinding.yaml
   - ../templates/configmap.yaml
   - ../templates/secret.yaml
 values:
