--- a/charts/cluster-scanner/templates/deployment.yaml
+++ b/charts/cluster-scanner/templates/deployment.yaml
@@ -17,7 +17,10 @@ spec:
       annotations:
         checksum/config: {{ include (print $.Template.BasePath "/configmap.yaml") . | sha256sum | quote  }}
         checksum/secret: {{ include (print $.Template.BasePath "/secret.yaml") . | sha256sum | quote  }}
-        checksum/rbac: {{ include (print $.Template.BasePath "/rbac.yaml") . | sha256sum | quote  }}
+        checksum/clusterrole: {{ include (print $.Template.BasePath "/clusterrole.yaml") . | sha256sum | quote  }}
+        checksum/clusterrolebinding: {{ include (print $.Template.BasePath "/clusterrolebinding.yaml") . | sha256sum | quote  }}
+        checksum/role: {{ include (print $.Template.BasePath "/role.yaml") . | sha256sum | quote  }}
+        checksum/rolebinding: {{ include (print $.Template.BasePath "/rolebinding.yaml") . | sha256sum | quote  }}
       {{- with .Values.podAnnotations }}
         {{- toYaml . | nindent 8 }}
       {{- end }}
